objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF( ISBLANK( End_Date__c ) ,
 
TEXT ( IF (  (MONTH(Today()) +12 - MONTH( Start_Date__c ))&gt;=12, YEAR(Today())-YEAR( Start_Date__c ), YEAR(Today())-YEAR(  Start_Date__c ) -1)) &amp; &quot; Years &quot; &amp;

TEXT ( IF (  (MONTH(Today()) +12 - MONTH(Start_Date__c ))&gt;=12,  (MONTH(Today()) +12 - MONTH(Start_Date__c  ))-12, (MONTH(Today()) +12 - MONTH(Start_Date__c  )))) &amp; &quot; Month&quot;,
 

TEXT ( IF (  (MONTH(End_Date__c ) +12 - MONTH( Start_Date__c ))&gt;=12, YEAR(End_Date__c )-YEAR( Start_Date__c ), YEAR(End_Date__c )-YEAR(  Start_Date__c ) -1)) &amp; &quot; Years &quot; &amp;


TEXT ( IF (  (MONTH(End_Date__c ) +12 - MONTH(Start_Date__c ))&gt;=12,  (MONTH(End_Date__c ) +12 - MONTH(Start_Date__c  ))-12, (MONTH(End_Date__c ) +12 - MONTH(Start_Date__c  )))) &amp; &quot; Month&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Department__c</fullName>
        <label>IT Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Superior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superior</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AvailabilityRule</fullName>
        <active>true</active>
        <errorConditionFormula>Part_Time__c == TRUE &amp;&amp; ( ISBLANK(Availability__c)  || Availability__c &gt; 8 ||  Availability__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Availability__c</errorDisplayField>
        <errorMessage>Availability should be from 1 to 8 hours</errorMessage>
    </validationRules>
</CustomObject>